@@ -1,45 +1,39 @@
 package org.thoughtcrime.securesms.groups.ui.creategroup;
 
-import android.animation.ValueAnimator;
 import android.content.Context;
 import android.content.Intent;
 import android.os.Bundle;
-import android.util.Pair;
 import android.view.MenuItem;
+import android.view.View;
 
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
-import androidx.appcompat.app.AlertDialog;
 
-import com.annimon.stream.Stream;
 import com.google.android.material.button.MaterialButton;
-import com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton;
+import com.google.android.material.floatingactionbutton.FloatingActionButton;
 
+import org.signal.core.util.concurrent.SimpleTask;
 import org.signal.core.util.logging.Log;
 import org.thoughtcrime.securesms.ContactSelectionActivity;
 import org.thoughtcrime.securesms.ContactSelectionListFragment;
 import org.thoughtcrime.securesms.R;
 import org.thoughtcrime.securesms.contacts.ContactsCursorLoader;
-import org.thoughtcrime.securesms.contacts.sync.DirectoryHelper;
-import org.thoughtcrime.securesms.database.RecipientDatabase;
-import org.thoughtcrime.securesms.groups.GroupsV2CapabilityChecker;
+import org.thoughtcrime.securesms.contacts.sync.ContactDiscovery;
+import org.thoughtcrime.securesms.database.RecipientTable;
 import org.thoughtcrime.securesms.groups.ui.creategroup.details.AddGroupDetailsActivity;
 import org.thoughtcrime.securesms.keyvalue.SignalStore;
 import org.thoughtcrime.securesms.recipients.Recipient;
 import org.thoughtcrime.securesms.recipients.RecipientId;
 import org.thoughtcrime.securesms.util.FeatureFlags;
-import org.thoughtcrime.securesms.util.Stopwatch;
-import org.thoughtcrime.securesms.util.Util;
-import org.thoughtcrime.securesms.util.ViewUtil;
-import org.thoughtcrime.securesms.util.concurrent.SimpleTask;
+import org.signal.core.util.Stopwatch;
 import org.thoughtcrime.securesms.util.views.SimpleProgressDialog;
-import org.whispersystems.libsignal.util.guava.Optional;
 
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
+import java.util.Set;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
 
 public class CreateGroupActivity extends ContactSelectionActivity {
 
@@ -47,9 +41,8 @@ public class CreateGroupActivity extends ContactSelectionActivity {
 
   private static final short REQUEST_CODE_ADD_DETAILS = 17275;
 
-  private ExtendedFloatingActionButton next;
-  private ValueAnimator                padStart;
-  private ValueAnimator                padEnd;
+  private MaterialButton       skip;
+  private FloatingActionButton next;
 
   public static Intent newIntent(@NonNull Context context) {
     Intent intent = new Intent(context, CreateGroupActivity.class);
@@ -57,8 +50,9 @@ public class CreateGroupActivity extends ContactSelectionActivity {
     intent.putExtra(ContactSelectionListFragment.REFRESHABLE, false);
     intent.putExtra(ContactSelectionActivity.EXTRA_LAYOUT_RES_ID, R.layout.create_group_activity);
 
-    int displayMode = Util.isDefaultSmsProvider(context) ? ContactsCursorLoader.DisplayMode.FLAG_SMS | ContactsCursorLoader.DisplayMode.FLAG_PUSH
-                                                         : ContactsCursorLoader.DisplayMode.FLAG_PUSH;
+    boolean smsEnabled = SignalStore.misc().getSmsExportPhase().allowSmsFeatures();
+    int displayMode = smsEnabled ? ContactsCursorLoader.DisplayMode.FLAG_SMS | ContactsCursorLoader.DisplayMode.FLAG_PUSH
+                                 : ContactsCursorLoader.DisplayMode.FLAG_PUSH;
 
     intent.putExtra(ContactSelectionListFragment.DISPLAY_MODE, displayMode);
     intent.putExtra(ContactSelectionListFragment.SELECTION_LIMITS, FeatureFlags.groupLimits().excludingSelf());
@@ -72,9 +66,11 @@ public class CreateGroupActivity extends ContactSelectionActivity {
     assert getSupportActionBar() != null;
     getSupportActionBar().setDisplayHomeAsUpEnabled(true);
 
+    skip = findViewById(R.id.skip);
     next = findViewById(R.id.next);
     extendSkip();
 
+    skip.setOnClickListener(v -> handleNextPressed());
     next.setOnClickListener(v -> handleNextPressed());
   }
 
@@ -98,7 +94,7 @@ public class CreateGroupActivity extends ContactSelectionActivity {
   }
 
   @Override
-  public void onBeforeContactSelected(Optional<RecipientId> recipientId, String number, Consumer<Boolean> callback) {
+  public void onBeforeContactSelected(@NonNull Optional<RecipientId> recipientId, String number, @NonNull Consumer<Boolean> callback) {
     if (contactsFragment.hasQueryFilter()) {
       getContactFilterView().clear();
     }
@@ -109,7 +105,7 @@ public class CreateGroupActivity extends ContactSelectionActivity {
   }
 
   @Override
-  public void onContactDeselected(Optional<RecipientId> recipientId, String number) {
+  public void onContactDeselected(@NonNull Optional<RecipientId> recipientId, String number) {
     if (contactsFragment.hasQueryFilter()) {
       getContactFilterView().clear();
     }
@@ -130,33 +126,13 @@ public class CreateGroupActivity extends ContactSelectionActivity {
   }
 
   private void extendSkip() {
-    next.setIconGravity(MaterialButton.ICON_GRAVITY_END);
-    next.extend();
-    animatePadding(24, 18);
+    skip.setVisibility(View.VISIBLE);
+    next.setVisibility(View.GONE);
   }
 
   private void shrinkSkip() {
-    next.setIconGravity(MaterialButton.ICON_GRAVITY_START);
-    next.shrink();
-    animatePadding(16, 16);
-  }
-
-  private void animatePadding(int startDp, int endDp) {
-    if (padStart != null) padStart.cancel();
-
-    padStart = ValueAnimator.ofInt(next.getPaddingStart(), ViewUtil.dpToPx(startDp)).setDuration(200);
-    padStart.addUpdateListener(animation -> {
-      ViewUtil.setPaddingStart(next, (Integer) animation.getAnimatedValue());
-    });
-    padStart.start();
-
-    if (padEnd != null) padEnd.cancel();
-
-    padEnd = ValueAnimator.ofInt(next.getPaddingEnd(), ViewUtil.dpToPx(endDp)).setDuration(200);
-    padEnd.addUpdateListener(animation -> {
-      ViewUtil.setPaddingEnd(next, (Integer) animation.getAnimatedValue());
-    });
-    padEnd.start();
+    skip.setVisibility(View.GONE);
+    next.setVisibility(View.VISIBLE);
   }
 
   private void handleNextPressed() {
@@ -164,23 +140,24 @@ public class CreateGroupActivity extends ContactSelectionActivity {
     SimpleProgressDialog.DismissibleDialog dismissibleDialog = SimpleProgressDialog.showDelayed(this);
 
     SimpleTask.run(getLifecycle(), () -> {
-      List<RecipientId> ids = Stream.of(contactsFragment.getSelectedContacts())
-                                    .map(selectedContact -> selectedContact.getOrCreateRecipientId(this))
-                                    .toList();
+      List<RecipientId> ids = contactsFragment.getSelectedContacts()
+                                              .stream()
+                                              .map(selectedContact -> selectedContact.getOrCreateRecipientId(this))
+                                              .collect(Collectors.toList());
 
       List<Recipient> resolved = Recipient.resolvedList(ids);
 
       stopwatch.split("resolve");
 
-      List<Recipient> registeredChecks = Stream.of(resolved)
-                                               .filter(r -> r.getRegistered() == RecipientDatabase.RegisteredState.UNKNOWN)
-                                               .toList();
+      Set<Recipient> registeredChecks = resolved.stream()
+                                                .filter(r -> r.getRegistered() == RecipientTable.RegisteredState.UNKNOWN)
+                                                .collect(Collectors.toSet());
 
       Log.i(TAG, "Need to do " + registeredChecks.size() + " registration checks.");
 
       for (Recipient recipient : registeredChecks) {
         try {
-          DirectoryHelper.refreshDirectoryFor(this, recipient, false);
+          ContactDiscovery.refresh(this, recipient, false);
         } catch (IOException e) {
           Log.w(TAG, "Failed to refresh registered status for " + recipient.getId(), e);
         }
@@ -188,49 +165,11 @@ public class CreateGroupActivity extends ContactSelectionActivity {
 
       stopwatch.split("registered");
 
-      List<Recipient> recipientsAndSelf = new ArrayList<>(resolved);
-      recipientsAndSelf.add(Recipient.self().resolve());
-
-      if (!SignalStore.internalValues().gv2DoNotCreateGv2Groups()) {
-        try {
-          GroupsV2CapabilityChecker.refreshCapabilitiesIfNecessary(recipientsAndSelf);
-        } catch (IOException e) {
-          Log.w(TAG, "Failed to refresh all recipient capabilities.", e);
-        }
-      }
-
-      stopwatch.split("capabilities");
-
-      resolved = Recipient.resolvedList(ids);
-
-      Pair<Boolean, List<RecipientId>> result;
-
-      boolean gv2 = Stream.of(recipientsAndSelf).allMatch(r -> r.getGroupsV2Capability() == Recipient.Capability.SUPPORTED);
-      if (!gv2 && Stream.of(resolved).anyMatch(r -> !r.hasE164()))
-      {
-        Log.w(TAG, "Invalid GV1 group...");
-        ids = Collections.emptyList();
-        result = Pair.create(false, ids);
-      } else {
-        result = Pair.create(true, ids);
-      }
-
-      stopwatch.split("gv1-check");
-
-      return result;
-    }, result -> {
+      return ids;
+    }, recipientIds -> {
       dismissibleDialog.dismiss();
-
       stopwatch.stop(TAG);
-
-      if (result.first) {
-        startActivityForResult(AddGroupDetailsActivity.newIntent(this, result.second), REQUEST_CODE_ADD_DETAILS);
-      } else {
-        new AlertDialog.Builder(this)
-                       .setMessage(R.string.CreateGroupActivity_some_contacts_cannot_be_in_legacy_groups)
-                       .setPositiveButton(android.R.string.ok, (d, w) -> d.dismiss())
-                       .show();
-      }
+      startActivityForResult(AddGroupDetailsActivity.newIntent(this, recipientIds), REQUEST_CODE_ADD_DETAILS);
     });
   }
 }
